--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -60,26 +60,28 @@
    "source": [
     "### ```if```, ```else``` 문의 문법 구조\n",
     "\n",
-    "if < some test >:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< test 결과가 True일 경우 해야 할 일 >  \n",
+    "```\n",
+    "if 조건문:  \n",
+    "  조건문 결과가 True일 경우 해야 할 일  \n",
     "else:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< test 결과가 False일 경우 해야 할 일>\n",
+    "  조건문 결과가 False일 경우 해야 할 일\n",
+    "```\n",
     "    \n",
     "* ```if```문과 ```else```의 마지막에 ```:``` 이 존재하는 것을 확인\n",
-    "* ```if```문은 test 조건절이 ```True```일 경우에 실행되는 코드 블록을 포함\n",
+    "* ```if```문은 test 조건문이 ```True```일 경우에 실행되는 코드 블록을 포함\n",
     "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함\n",
     "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함\n",
     "* 필요가 없을 경우 ```else``` 문은 생략 가능 \n",
     "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개\n",
     "* 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능\n",
     "\n",
-    "if < some test >: < test 결과가 True일 경우 해야 할 일 >  \n",
-    "else: < test 결과가 False일 경우 해야 할 일 >"
+    "```if 조건문: 조건문 결과가 True일 경우 해야 할 일```  \n",
+    "```else: 조건문 결과가 False일 경우 해야 할 일```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -255,14 +257,16 @@
     "\n",
     "```elif``` 의 문법\n",
     "\n",
+    "```\n",
     "if expression1:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "  statement1(s)  \n",
     "elif expression2:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "  statement2(s)  \n",
     "elif expression3:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)  \n",
+    "  statement3(s)  \n",
     "else:  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;statement(s)\n",
+    "  statement4(s)\n",
+    "```\n",
     "\n",
     "\n",
     "* ```elif``` 문을 사용하면 여러 표현식을 검사하고, 조건 중 하나가 ```True```로 판정되는 코드 블록을 실행\n",
@@ -304,20 +308,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 예제 \n",
-    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다."
+    "#### 예제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Divisible by 2 and not by 3\n"
+      "three digit number\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 123\n",
+    "if x < 10:\n",
+    "    print('one digit number')\n",
+    "elif x < 100:\n",
+    "    print('two digit number')\n",
+    "elif x < 1000:\n",
+    "    print('three digit number')\n",
+    "else:\n",
+    "    print('large number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제 \n",
+    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divisible by 3 and not by 2\n"
      ]
     }
    ],
@@ -542,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "예제"
+    "#### 예제"
    ]
   },
   {
