--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## if else 구문\n",
+    "\n",
     "### Statement\n",
     "\n",
-    "Python interpreter가 실행 가능한 문법에 옳은 문장들\n",
+    "Python interpreter가 실행 가능한 문법에 옳은 문장들을 statement라 한다.\n",
     "* ```1 + 2```\n",
     "* ```x = 7```\n",
     "* ```print(\"Hello\")```\n",
@@ -19,26 +21,26 @@
     "\n",
     "프로그래머가 명시한 if의 조건이 True인가 False인가에 따라 실행하는 문장(statement)이 달라지는 구문\n",
     "\n",
-    "![alt tag](https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true)\n",
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true\" width=\"300\" height=\"200\" />\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Even\n"
+      "Odd\n"
      ]
     }
    ],
    "source": [
     "x = 15\n",
-    "if x %% 2 == 0:\n",
+    "if x % 2 == 0:\n",
     "    print('Even')\n",
     "else:\n",
     "    print('Odd')"
@@ -48,8 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```x %% 2 == 0``` 의 연산결과가 ```True```이면\n",
+    "```x % 2 == 0``` (x를 2로 나눈 나머지가 0인가)의 연산결과가 ```True```이면\n",
     "* ```print('Even')```을 실행\n",
+    "\n",
     "```False```이면\n",
     "* ```print('Odd')```을 실행"
    ]
@@ -59,6 +62,8 @@
    "metadata": {},
    "source": [
     "### ```if```, ```else``` 문의 문법 구조\n",
+    "\n",
+    "* ```if else```구문의 기본적인 구조는 다음과 같다.\n",
     "\n",
     "```\n",
     "if 조건문:  \n",
@@ -75,13 +80,15 @@
     "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개\n",
     "* 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능\n",
     "\n",
-    "```if 조건문: 조건문 결과가 True일 경우 해야 할 일```  \n",
-    "```else: 조건문 결과가 False일 경우 해야 할 일```"
+    "```\n",
+    "if 조건문: 조건문 결과가 True일 경우 해야 할 일\n",
+    "else: 조건문 결과가 False일 경우 해야 할 일\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +109,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```else``` 이 후의 내용이 필요 없을 경우 ```else```는 생략 가능"
+    "```else``` 이 후의 내용이 필요 없을 경우 ```else``` 부분은 생략 가능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "들여쓰기 - indentation\n",
+    "#### 들여쓰기 - indentation\n",
     "* C/C++이나 JAVA와 같은 언어에서는 들여쓰기는 코드를 보기 좋게 만들기 위한 것일 뿐 필수적인 것은 아님\n",
     "* Python에서는 들여쓰기가 문법의 일부이므로 반드시 지키도록 한다.\n",
     "* 따라서 다음은 바로 위의 코드와는 다르게 작동한다."
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "간단한 예제:"
+    "#### 간단한 예제:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +222,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "주의 : 조건문에서 두 값이 같은지 비교할 때는 == 를 이용해야 한다.\n",
+    "따라서 다음 코드는 에러가 발생한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-bc1a75b24bad>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-bc1a75b24bad>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    if x = y:\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = 3, 3\n",
+    "if x = y:\n",
+    "    print(\"x is equal to y.\")\n",
+    "else:\n",
+    "    print(\"x is different from y.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "주의 : 다음 두 코드의 차이점을 잘 살펴보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "if x > 0:\n",
+    "    x = x - 2\n",
+    "else:\n",
+    "    x = x + 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "if x > 0:\n",
+    "    x = x - 2\n",
+    "if x < 0:\n",
+    "    x = x + 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### nested ```if``` statement\n",
     "\n",
     "* 하나의 조건을 검사한 후에, 또다른 조건을 검사해야 될 필요가 있을 수 있다.\n",
@@ -226,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -341,12 +429,12 @@
    "metadata": {},
    "source": [
     "#### 예제 \n",
-    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다."
+    "다음의 예제는 ```elif```을 사용하여 보다 간단하게 작성할 수 있다. 스스로 작성하여 보자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +473,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +493,7 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +513,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +533,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +553,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,73 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True or False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "False or True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "False or False"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 22,
@@ -551,7 +579,7 @@
     }
    ],
    "source": [
-    "not True"
+    "True or False"
    ]
   },
   {
@@ -571,6 +599,66 @@
     }
    ],
    "source": [
+    "False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "not False"
    ]
   },
@@ -583,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -595,15 +683,15 @@
     }
    ],
    "source": [
-    "x=3\n",
-    "y=7\n",
-    "if x<y and x<0: print(\"if\")\n",
+    "x = 3\n",
+    "y = 7\n",
+    "if x < y and x < 0: print(\"if\")\n",
     "else: print(\"else\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -615,10 +703,98 @@
     }
    ],
    "source": [
-    "x=3\n",
-    "y=7\n",
-    "if x<y or x<0: print(\"if\")\n",
+    "x = 3\n",
+    "y = 7\n",
+    "if x < y or x < 0: print(\"if\")\n",
     "else: print(\"else\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제\n",
+    "```input()``` 함수와 결합한 예제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In Python, = is used for equality comparison, right? Yes or No >> no\n",
+      "You have cleared the test.\n",
+      "Thanks!\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = input(\"In Python, = is used for equality comparison, right? Yes or No >> \").lower()\n",
+    "\n",
+    "if answer == \"no\" :\n",
+    "    print(\"You have cleared the test.\")\n",
+    "else :\n",
+    "    print(\"You have failed the test.\")\n",
+    "\n",
+    "print(\"Thanks!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inline ```if-else``` statements\n",
+    "Python은 다음과 같이 ```if else```를 한 라인에 작성할 수 있도록 지원한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "large\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 37\n",
+    "y = \"large\" if a ** 2 > 1000 else \"small\"\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 코드는 아래 코드와 같다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "large\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 37\n",
+    "if a ** 2 > 1000: y = \"large\"\n",
+    "else: y = \"small\"\n",
+    "print(y)"
    ]
   },
   {
