--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -33,9 +33,10 @@
     "\n",
     "* ```return [expression]``` 명령문은 함수를 종료하고 호출자에게 표현식을 전달한다. \n",
     "\n",
-    "\n",
+    "```\n",
     "def function_name(< argument >):   \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;< something to do >"
+    "   < something to do >\n",
+    "```"
    ]
   },
   {
@@ -66,7 +67,8 @@
     " * ```x**2 + 1``` 의 계산을 수행한 후 \n",
     " * 결과를 ```ans```에 대입하여 반환(return)하고 있음\n",
     "\n",
-    " * ```square_plus_one(10)``` 등을 수행해 보자."
+    " * 함수의 정의가 완료되었으면 이 함수를 이용하여 계산을 할 수 있다.\n",
+    "   * ```square_plus_one(10)``` 등을 수행해 보자."
    ]
   },
   {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +110,12 @@
     "    ans = 0\n",
     "    increment = 1\n",
     "    while increment >= 0.0001:\n",
-    "          ans += increment\n",
-    "          if ans**2 == x:\n",
-    "                break\n",
-    "          elif ans**2>x:\n",
-    "                  ans -= increment\n",
-    "                  increment = increment/10.0\n",
+    "        ans += increment\n",
+    "        if ans**2 == x:\n",
+    "            break\n",
+    "        elif ans**2>x:\n",
+    "            ans -= increment\n",
+    "            increment = increment/10.0\n",
     "    return ans"
    ]
   },
@@ -123,7 +125,7 @@
    "source": [
     "### 함수 사용\n",
     "\n",
-    "* 함수를 정의하였으면 이를 스크립트 내에서 활용할 수 있음"
+    "* 함수를 정의하였으면 이를 활용할 수 있음"
    ]
   },
   {
@@ -203,7 +205,8 @@
    "source": [
     "### 함수의 인자(argument)\n",
     "\n",
-    "* 함수는 아무런 인자를 받지 않을 수 있음"
+    "* 함수는 아무런 인자를 받지 않을 수 있음\n",
+    "* 빈 괄호 ()로 표현된다."
    ]
   },
   {
@@ -221,8 +224,8 @@
    "metadata": {},
    "source": [
     "* 위 함수는 아무런 인자를 받지 않을 뿐만 아니라, 아무런 반환값도 없음\n",
-    "\n",
-    " * ```print_something()``` 함수를 실행해 보자. "
+    "  * ```return```을 찾을 수 없다.\n",
+    "  * ```print_something()``` 함수를 실행해 보자. "
    ]
   },
   {
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -261,13 +264,13 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-909177142d6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-3-1120a7305cb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'str'"
      ]
     }
    ],
    "source": [
-    "def printme( str ):\n",
+    "def printme(str):\n",
     "    print(\"Input is :\",str)\n",
     "    return;\n",
     "\n",
@@ -278,12 +281,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 다음과 같이 인자가 어떤 값을 입력받는지 확실히 표현할 수도 있다."
+    "* 다음과 같이 인자가 어떤 값을 입력받는지 확실히 표현할 수도 있다.\n",
+    "  * ```(str = \"My string\") ```이라고 표현한 것에 주목하자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,12 +299,12 @@
     }
    ],
    "source": [
-    "def printme( str ):\n",
+    "def printme(str):\n",
     "    print(\"Input is :\",str)\n",
     "    return;\n",
     "\n",
     "\n",
-    "printme( str = \"My string\")"
+    "printme(str = \"My string\")"
    ]
   },
   {
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +331,12 @@
     }
    ],
    "source": [
-    "def printinfo( name, age ):\n",
+    "def printinfo(name, age):\n",
     "    print(\"Name: \", name)\n",
     "    print(\"Age: \", age)\n",
     "    return;\n",
     "\n",
-    "printinfo( age=50, name=\"miki\" )"
+    "printinfo(age=50, name=\"miki\")"
    ]
   },
   {
@@ -648,6 +652,68 @@
     "x = 1\n",
     "x = increase(x)\n",
     "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  변수  scope 더 살펴보기\n",
+    "\n",
+    "변수의 scope는 해당 변수가 파이썬 인터프리터에게 보이거나 액세스 가능한 범위를 나타낸다.\n",
+    "\n",
+    "다음의 예제에서 변수 ```x```는 함수 내에 존재하지 않기 때문에, 함수 바깥에서 정의된 ```x```의 값을 가져온다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "def print_x():\n",
+    "    print(x)\n",
+    "    \n",
+    "print_x()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다음은 함수 밖에 ```x```가 정의되어 있어 있지만, 함수 내에서 ```x```가 다시 정의되다.  \n",
+    "이 경우 함수 내에서 ```x```를 사용할 때는, 함수 내에서 정의된 ```x```가 우선 순위를 가진다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "def print_x():\n",
+    "    x = 2\n",
+    "    print(x)\n",
+    "    \n",
+    "print_x()"
    ]
   },
   {
