--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "### Statement\n",
     "\n",
-    "Python interpreter가 실행 가능한 문법에 옳은 문장들을 statement라 한다.\n",
+    "Python interpreter가 실행 가능한 문법에 옳은 문장들을 statement라 한다.  \n",
+    "앞 장에서 공부한 statement들과 더불어 조건문과 반복문을 공부해 보자.\n",
+    "\n",
     "* ```1 + 2```\n",
     "* ```x = 7```\n",
     "* ```print(\"Hello\")```\n",
@@ -21,7 +23,7 @@
     "\n",
     "프로그래머가 명시한 if의 조건이 True인가 False인가에 따라 실행하는 문장(statement)이 달라지는 구문\n",
     "\n",
-    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true\" width=\"300\" height=\"200\" />\n",
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true\" width=\"250\" height=\"175\" />\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
    ]
   },
@@ -72,12 +74,12 @@
     "  조건문 결과가 False일 경우 해야 할 일\n",
     "```\n",
     "    \n",
-    "* ```if```문과 ```else```의 마지막에 ```:``` 이 존재하는 것을 확인\n",
-    "* ```if```문은 test 조건문이 ```True```일 경우에 실행되는 코드 블록을 포함\n",
-    "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함\n",
-    "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함\n",
-    "* 필요가 없을 경우 ```else``` 문은 생략 가능 \n",
-    "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개\n",
+    "* ```if```문과 ```else```의 마지막에 ```:```를 포함하여야 한다.\n",
+    "* ```if```문은 test 조건문이 ```True```일 경우에 실행되는 코드 블록을 포함함.\n",
+    "* ```else``` 문은 ```if``` 문에있는 조건식이 ```0``` 또는 ```False``` 값으로 해석될 때 실행되는 코드 블록을 포함함.\n",
+    "* ```if```문과 ```else```의 내용은 들여쓰기(indentation)를 해야 함.\n",
+    "* 하나의 ```if```에 대응되는 ```else```는 많아야 한 개  \n",
+    "  * 필요가 없을 경우 ```else``` 문은 생략 가능 \n",
     "* 코드가 간단할 경우, 줄을 바꿔 들여쓰기를 하지 않고, 다음과 같은 문법도 가능\n",
     "\n",
     "```\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +198,13 @@
     }
    ],
    "source": [
-    "if 3<4: print(\"if\")\n",
+    "if 3 < 4: print(\"if\")\n",
     "else: print(\"else\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +216,7 @@
     }
    ],
    "source": [
-    "if \"3\"<\"4\": print(\"if\")\n",
+    "if \"3\" < \"4\": print(\"if\")\n",
     "else: print(\"else\")"
    ]
   },
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +296,7 @@
     "x = 1\n",
     "if x > 0:\n",
     "    x = x - 2\n",
-    "if x < 0:\n",
+    "if x <= 0:\n",
     "    x = x + 2\n",
     "print(x)"
    ]
@@ -309,7 +311,7 @@
     "* 이러한 경우 중첩된 ```if``` 구문을 사용할 수 있다.\n",
     "* 하나의 ```if```문 혹은 ```else```문 내에 또다른 ```if```,```else``` 구문이 나타날 수 있다.\n",
     "   * 마찬가지로 ```if```문 내에 ```if```문 내에 ```if```문이 등장할 수도 있다.\n",
-    "* 최소값을 찾는 다음의 코드가 옳게 작동하는지 살펴 보자."
+    "* 최소값을 찾는 다음의 코드가 옳게 작동하는지 살펴 보고, 잘못된 부분이 있으면 개선하여 보자."
    ]
   },
   {
@@ -359,12 +361,12 @@
     "\n",
     "* ```elif``` 문을 사용하면 여러 표현식을 검사하고, 조건 중 하나가 ```True```로 판정되는 코드 블록을 실행\n",
     "* ```else```와 마찬가지로 ```elif``` 프로그램의 목적에 따라 생략이 될 수 있음\n",
-    "* 그러나 ```else```와는 달리, ```if``` 다음에 임의의 수의 ```elif``` 문이 있을 수 있음"
+    "* 그러나 많아야 한 번 등장하는 ```else```와는 달리, ```if``` 다음에 임의의 수의 ```elif``` 문이 있을 수 있음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -376,11 +378,11 @@
     }
    ],
    "source": [
-    "x=10\n",
-    "y=5\n",
-    "z=2\n",
-    "if x<y and x<z: print(\"x is the least\")\n",
-    "elif y<z: print(\"y is the least\")\n",
+    "x = 10\n",
+    "y = 5\n",
+    "z = 2\n",
+    "if x < y and x < z: print(\"x is the least\")\n",
+    "elif y < z: print(\"y is the least\")\n",
     "else: print(\"z is the least\")"
    ]
   },
