--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -632,18 +632,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
    "source": [
     "def increase(x):\n",
     "    x = x + 1\n",
@@ -728,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +814,7 @@
        "[None, None]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,29 +834,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 앞의 예제에서 return이 두 번 등장함을 볼 수 있음"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def farm(numHeads, numLegs):\n",
-    "    for x in range(0, numHeads + 1):\n",
-    "        y = numHeads - x\n",
-    "        if 4*x + 2*y == numLegs:\n",
-    "             return [x, y]\n",
-    "    return [None, None]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 첫 번째 return은 방정식의 조건이 만족하면 다리의 숫자를 return하고 함수를 종료\n",
-    "* 두 번째 return은 방정식의 조건을 만족하는 해가 없을 때 None을 반환"
+    "* 앞의 예제에서 return이 두 번 등장함을 볼 수 있음  \n",
+    "   * 첫 번째 return은 방정식의 조건이 만족하면 다리의 숫자를 return하고 함수를 종료  \n",
+    "   * 두 번째 return은 방정식의 조건을 만족하는 해가 없을 때 None을 반환"
    ]
   },
   {
@@ -878,17 +848,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : 12\n",
-      "Enther the number of legs : 24\n",
-      "Number of pigs :  0\n",
-      "Number of chickens :  12\n"
+      "Enter the number of heads : 4\n",
+      "Enther the number of legs : 1\n",
+      "No solution\n"
      ]
     }
    ],
@@ -949,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +927,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -979,13 +948,94 @@
        "1.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "math.sin(math.pi/2)"
+    "math.sin(math.pi / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(4) / math.log(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(4) % math.log(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(8) / math.log(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6931471805599452"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 실수 간의 나머지를 계산할 때는 주의하여야 한다.\n",
+    "math.log(8) % math.log(2)"
    ]
   },
   {
