--- a/6.Linear_algebra.ipynb
+++ b/6.Linear_algebra.ipynb
@@ -60,13 +60,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vector_add(v, w):\n",
     "    \"\"\"adds two vectors componentwise\"\"\"\n",
     "    return [v_i + w_i for v_i, w_i in zip(v,w)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_add([1,2], [3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 8]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_add([1,2,3], [3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 7, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = [1,2,3]\n",
+    "w = [2,3,4]\n",
+    "z = vector_add(v, w)\n",
+    "y = vector_add(z, v)\n",
+    "print(y)"
    ]
   },
   {
