--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
     {
      "data": {
       "text/plain": [
-       "'Introductino to Python'"
+       "'Introduction to Python'"
       ]
      },
      "execution_count": 74,
@@ -1890,7 +1890,7 @@
     }
    ],
    "source": [
-    "\" Introductino to Python    \".strip()"
+    "\" Introduction to Python    \".strip()"
    ]
   },
   {
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {
     "scrolled": true
    },
