--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -812,8 +812,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 참조와 복사(2)\n",
-    "\n",
     "* L1에 새로운 리스트를 대응하면 원래의 참조를 끊고 새로운 대입값을 적용"
    ]
   },
@@ -866,19 +864,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 참조와 복사(3)\n",
-    "\n",
-    "* 같은 대상을 참조하는 것이 아니라 대상을 복사하여 사용하고 싶을 때"
+    "* 같은 대상을 참조하는 것이 아니라 대상을 복사하여 사용하고 싶을 때  \n",
+    "  * 복사는 얕은 복사와 깊은 복사가 있으며 우리 과정에서는 얕은 복사만 다룬다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "L1 = [1, 2, 3]\n",
-    "L2 = L1[:]"
+    "L2 = L1[:]     #python2에서 많이 쓰던 방법"
    ]
   },
   {
@@ -890,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,8 +895,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "혹은"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python3에서 가장 추천하는 방법\n",
+    "L2 = L1.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 복사의 예 (Cloning)\n",
+    "### 복사의 예\n",
     "\n",
     "* Python 언어의 모든 매개 변수는 참조로 전달된다.\n",
     "* 즉, 함수 내에서 매개 변수가 참조하는 것을 변경하면 변경 내용은 호출 함수 밖에서도 반영된다.\n",
@@ -978,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1006,7 @@
    ],
    "source": [
     "def changeme(mylist):\n",
-    "    mylist = mylist[:]\n",
+    "    mylist = mylist.copy()\n",
     "    mylist.append([1,2,3,4])\n",
     "    print(\"Values inside the function: \", mylist)\n",
     "    return\n",
@@ -1040,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1068,7 @@
    "source": [
     "# 복사 [:]를 사용하여 정상적으로 고칠 수 있다.\n",
     "def removeDup(L1, L2):\n",
-    "    for e1 in L1[:]:\n",
+    "    for e1 in L1.copy():\n",
     "        if e1 in L2:\n",
     "            L1.remove(e1)\n",
     "            \n",
@@ -1098,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1127,7 @@
     "L1=[1,2,3,4]\n",
     "L2=[1,2,5,6]\n",
     "\n",
-    "for e1 in L1[:]:\n",
+    "for e1 in L1.copy():\n",
     "    if e1 in L2:\n",
     "        L1.remove(e1)\n",
     "            \n",
@@ -1860,7 +1874,8 @@
    "source": [
     "#### ```[0, 1, 2, 3, 4]```와 ```range(5)```의 차이:\n",
     "\n",
-    "```range(5)```는 숫자 0-4의 수열을 생성하는 데 필요한 명령을 저장하지만, list ```[0, 1, 2, 3, 4]```은 속해 있는 모든 값을 메모리에 저장한다."
+    "Python3에서는 ```range(5)```는 숫자 0-4의 수열을 생성하는 데 필요한 명령을 저장하지만, list ```[0, 1, 2, 3, 4]```은 속해 있는 모든 값을 메모리에 저장한다.\n",
+    " * Python2에서는 ```[0, 1, 2, 3, 4]```와 ```range(5)```는 같다."
    ]
   },
   {
