--- a/10.Hypothesis_test_and_inference.ipynb
+++ b/10.Hypothesis_test_and_inference.ipynb
@@ -11,7 +11,7 @@
     "통계적 가설의 예\n",
     " * 이 동전은 공평하다.\n",
     " * 데이터 과학자들은 Python을 R보다 선호한다.\n",
-    " * 사람들은 인터넷 서핑 중 닫힘 버튼이 매우 작아 닫기 짜증나는 팝업 광고가 나타나면 정성들여 조그만 닫힘 버튼에 마우스 커서를 올린 후 클릭하여 팝업창을 없앤 후 페이지 내용을 읽기 보다는 그 페이지를 떠나 버리는 경향이 강하다.\n",
+    " * 새로운 치료약은 기존의 치료약 보다 좋은 성능을 지닌다.\n",
     "\n",
     "귀무 가설 $H_0$\n",
     " * 기각할지 말지 결정하는 가설\n",
@@ -69,28 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 정규분포의 역함수\n",
     "\n",
-    "def inverse_normal_cdf(p, mu=0, sigma=1, tolerance=0.00001):\n",
+    "def inverse_normal_cdf(p, mu=0, sigma=1, tolerance=0.000001):\n",
+    "    # 표준 정규 분포가 아닌 경우 X = mu + sigma * Z를 이용\n",
     "    if mu != 0 or sigma != 1:\n",
     "        return mu + sigma * inverse_normal_cdf(p, tolerance=tolerance)\n",
     "\n",
-    "    low_z, low_p = -10.0, 0                 # normal_cdf(-10)은 0과 매우 가까움\n",
-    "    hi_z,  hi_p  =  10.0, 1                 # normal_cdf(10)은 1과 매우 가까움\n",
-    "    while hi_p - low_p > tolerance:\n",
-    "        mid_z = (low_z + hi_z) / 2          # 중앙값\n",
-    "        mid_p = normal_cdf(mid_z)           # 중앙값의 cdf\n",
-    "        if mid_p < p:                       # 중앙값이 아직 작으면 윗쪽을 탐색\n",
-    "            low_z, low_p = mid_z, mid_p\n",
-    "        elif mid_p > p:                     # 중앙값이 아직 크면, 아랫쪽을 탐색\n",
-    "            hi_z, hi_p = mid_z, mid_p\n",
+    "    left, right = -10.0, 10.0\n",
+    "    while normal_cdf(right) - normal_cdf(left) > tolerance:\n",
+    "        mid = (right + left) / 2          # 중앙값\n",
+    "        if normal_cdf(mid) < p:           # 중앙값이 아직 작으면 윗쪽을 탐색\n",
+    "            left = mid\n",
+    "        elif normal_cdf(mid) > p:         # 중앙값이 아직 크면, 아랫쪽을 탐색\n",
+    "            right = mid\n",
     "        else:\n",
     "            break\n",
-    "    return mid_z"
+    "    return (right + left) / 2"
    ]
   },
   {
@@ -98,10 +97,10 @@
    "metadata": {},
    "source": [
     "물론 위 함수들은 연습의 목적으로 직접 만들어 보았지만, 이 과목 외에서 실제 정규분포 관련함수를 다루어야 될 필요가 있다면, Python 모듈에 이미 존재하는 함수를 이용하는 것이 좋다.\n",
-    " * from scipy.stats import norm를 이용한다.\n",
-    " * norm.cdf(x, loc=0, scale=1)  : 누적분포함수\n",
-    " * norm.pdf(x, loc=0, scale=1)  : 확률밀도함수\n",
-    " * norm.ppf(q, loc=0, scale=1)  : 누적분포함수의 역함수\n",
+    " * ```from scipy.stats import norm```를 이용한다.\n",
+    " * ```norm.cdf(x, loc=0, scale=1)```  : 누적분포함수\n",
+    " * ```norm.pdf(x, loc=0, scale=1)```  : 확률밀도함수\n",
+    " * ```norm.ppf(q, loc=0, scale=1)```  : 누적분포함수의 역함수\n",
     " \n",
     "scipy.stats.norm에서 제공하는 함수와 직접 만든 함수를 비교해 보자."
    ]
@@ -260,7 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$𝑃(𝑍≤𝑧)=probability$ 가 되게 하는 $z$ 반환"
+    "$𝑃(𝑍≤𝑧)=probability$ 가 되게 하는 $z$ 반환\n",
+    "\n",
+    "* 왼쪽 부분의 면적이 probability가 되게 하는 $z$ 반환"
    ]
   },
   {
@@ -277,12 +278,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ 𝑃(𝑍≥𝑧)=probability$ 가 되게 하는 $z$ 반환"
+    "$ 𝑃(𝑍≥𝑧)=probability$ 가 되게 하는 $z$ 반환\n",
+    "\n",
+    "* 오른쪽 부분의 면적이 probability가 되게 하는 $z$ 반환"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,20 +297,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$𝑃(lb ≤𝑍≤ub )=probability$ 가 되게 하는 $lb, ub$ 반환"
+    "$𝑃(a ≤𝑍≤ b )=probability$ 가 되게 하는 $a, b$ 반환\n",
+    "\n",
+    "* 가운데 부분의 면적이 probability가 되게 하는 $a, b$ 반환"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normal_two_sided_bounds(probability, mu=0, sigma=1):\n",
     "    tail_probability = (1 - probability) / 2\n",
-    "    upper_bound = normal_lower_bound(tail_probability, mu, sigma)\n",
-    "    lower_bound = normal_upper_bound(tail_probability, mu, sigma)\n",
-    "    return lower_bound, upper_bound"
+    "    b = normal_lower_bound(tail_probability, mu, sigma)\n",
+    "    a = normal_upper_bound(tail_probability, mu, sigma)\n",
+    "    return a, b"
    ]
   },
   {
@@ -316,7 +321,7 @@
    "source": [
     "### 가설 검정\n",
     "\n",
-    "####양측 검정\n",
+    "#### 양측 검정\n",
     "\n",
     "동전을 1000회 던졌다고 가정, $𝑋$ : 총 앞면의 개수\n",
     "\n",
@@ -598,13 +603,6 @@
     "num_rejections = len([experiment for experiment in experiments if reject_fariness(experiment)])\n",
     "print(num_rejections)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
