--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/variable_object.png?raw=true)"
+    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/variable_obejct.png?raw=true)"
    ]
   },
   {
@@ -2091,9 +2091,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'March2019.ppt'.startswith('March')"
    ]
@@ -2108,9 +2119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Introduction to Python'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\" Introduction to Python    \".strip()"
    ]
@@ -2126,18 +2148,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['How', 'are', 'you?', 'I', 'am', 'fine,', 'and', 'you?']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"How are you? I am fine, and you?\".split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Split', 'this', 'string', 'please']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Split_this_string_please\".split(\"_\")"
    ]
@@ -2151,9 +2195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Tom and I am from New York.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Tom\"\n",
     "home = \"New York\"\n",
@@ -2172,18 +2224,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Kyungsub Lee\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are you really Kyungsub Lee?\n"
+     ]
+    }
+   ],
    "source": [
     "print('Are you really ' + name + '?')"
    ]
@@ -2199,9 +2267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input any number: 1.1\n"
+     ]
+    }
+   ],
    "source": [
     "num = input('Input any number: ')"
    ]
@@ -2216,11 +2292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square of num 1.1 is 1.2100000000000002\n"
+     ]
+    }
+   ],
    "source": [
     "sqr = float(num) * float(num)\n",
     "print('The square of num ' + num + ' is ' + str(sqr))"
