--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/variable_obejct.png?raw=true)"
+    "<img src=\"./figure/variable_obejct.png\" width=\"400\">"
    ]
   },
   {
