--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
     "Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.\n",
     "아래 그림의 In [1]: 오른쪽 부분에 print 'This is my first Python program.' 를 입력하고 엔터를 입력한다.\n",
     "\n",
-    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/console.png?raw=true)"
+    "<img src=\"./figure/console.png\" width=\"500\">"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Python 3.x에서는 정수끼리 나누기 연산의 결과는 실수로 나타난다."
+    "Python 3.x에서는 정수끼리 나누기 연산의 결과는 실수로 나타난다."
    ]
   },
   {
@@ -173,6 +173,33 @@
    ],
    "source": [
     "3 / 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "만약 나누기의 정수 부분만 나타내려면 다음을 이용한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 // 3"
    ]
   },
   {
@@ -402,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt tag](https://github.com/ksublee/spup/blob/master/figure/variable.png?raw=true)"
+    "<img src=\"./figure/variable.png\" width=\"600\">"
    ]
   },
   {
