--- a/10.Hypothesis_test_and_inference.ipynb
+++ b/10.Hypothesis_test_and_inference.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 10. Hyperthesis test and inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 통계적 가설 검정\n",
     "\n",
     "이 단원에서는 통계적 가설 검정을 위한 함수들을 직접 작성하고, 활용하여 본다.\n",
