--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2. Python의 기본"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Python 프로그램\n",
     "\n",
     "* Python 프로그램의 소스 코드는 일련의 정의와 명령문으로 구성된다.\n",
