--- a/3.Python_Loop.ipynb
+++ b/3.Python_Loop.ipynb
@@ -7,19 +7,60 @@
     "### 반복문\n",
     "\n",
     "프로그래밍을 하다보면, 같은 혹은 비슷한 코드를 여러 번 반복해야 할 경우가 있다.  \n",
-    "반복문은 이러한 반복 작업을 효율적으로 진행할 수 있게 한다.\n",
-    "\n",
+    "반복문은 이러한 반복 작업을 효율적으로 진행할 수 있게 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### ```while```\n",
     "\n",
     "같은 코드를 ```while```문을 이용하여 여러 번 실행할 수 있음  \n",
-    "```while``` 루프 문은 주어진 조건이 참일 경우 목표 문장을 반복적으로 실행\n",
-    "\n",
-    "다음의 예제는 5를 3번 합하여 15를 만드는 과정을 보여준다.  즉, 5 * 3을 더하기(5 + 5 + 5)로 반복하는 과정."
+    "```while``` 루프 문은 주어진 조건이 참일 경우 목표 문장을 반복적으로 실행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "간단한 예제부터 살펴보자."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I want to print this sentence repeatedly.\n",
+      "I want to print this sentence repeatedly.\n",
+      "I want to print this sentence repeatedly.\n",
+      "I want to print this sentence repeatedly.\n",
+      "I want to print this sentence repeatedly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 5:\n",
+    "    print(\"I want to print this sentence repeatedly.\")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다음은 보다 복잡한 예제로서 5를 3번 합하여 15를 만드는 과정을 보여준다.  즉, 5 * 3을 더하기(5 + 5 + 5)로 반복하는 과정."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +140,38 @@
    ],
    "source": [
     "j = 3\n",
-    "while j>0:\n",
+    "while j > 0:\n",
     "    j -= 1\n",
     "    print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 반복문을 ```j```의 값을 증가하는 방법으로 코드를 조금 바꾸어 보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world, iteration number :  1\n",
+      "Hello world, iteration number :  2\n",
+      "Hello world, iteration number :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "j = 0\n",
+    "while j < 3:\n",
+    "    j += 1\n",
+    "    print(\"Hello world, iteration number : \", j)"
    ]
   },
   {
@@ -113,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +387,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If type q, you can quit : hey\n",
-      "You just typed : hey\n",
-      "If type q, you can quit : 1\n",
-      "You just typed : 1\n",
+      "If type q, you can quit : Hi\n",
+      "You just typed : Hi\n",
+      "If type q, you can quit : Good morning\n",
+      "You just typed : Good morning\n",
       "If type q, you can quit : q\n"
      ]
     }
