--- a/7.Visualizing_Data.ipynb
+++ b/7.Visualizing_Data.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 7. Visualizaing Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### matplotlib\n",
     "\n",
     "* matplotlib.pyplot\n",
