--- a/3.Python_Conditional.ipynb
+++ b/3.Python_Conditional.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3. 조건문"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## if else 구문\n",
     "\n",
     "### Statement\n",
@@ -21,10 +28,28 @@
     "\n",
     "### 조건문\n",
     "\n",
-    "프로그래머가 명시한 if의 조건이 True인가 False인가에 따라 실행하는 문장(statement)이 달라지는 구문\n",
+    "프로그래머가 명시한 ```if```의 조건이 ```True```인가 ```False```인가에 따라 실행하는 문장(statement)이 달라지는 구문\n",
+    " * 테스트 구문은 항상 ```True``` 혹은 ```False```로 계산된다.\n",
+    " * ```if```절의 다음에는 만약 테스트 결과가 ```True```일 경우 실행될 코드 블록이 나타난다.\n",
+    "    * 만약 테스트 구문이 ```False```로 판명나면 실행하지 않는다.\n",
+    " * 추가적으로 만약 테스트 구문이 ```False```일 때 할 일을 나타낼 수 있다.\n",
+    "    * 이에 해당되는 코드는 ```else``` 혹은 ```elif```의 구문에서 나타난다.\n",
     "\n",
     "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true\" width=\"250\" height=\"175\" />\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래 예제에 대한 간략한 설명이다. \n",
+    "\n",
+    "```x % 2 == 0``` (x를 2로 나눈 나머지가 0인가)의 연산결과가 ```True```이면\n",
+    "* ```print('Even')```을 실행\n",
+    "\n",
+    "```False```이면\n",
+    "* ```print('Odd')```을 실행"
    ]
   },
   {
@@ -46,17 +71,6 @@
     "    print('Even')\n",
     "else:\n",
     "    print('Odd')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```x % 2 == 0``` (x를 2로 나눈 나머지가 0인가)의 연산결과가 ```True```이면\n",
-    "* ```print('Even')```을 실행\n",
-    "\n",
-    "```False```이면\n",
-    "* ```print('Odd')```을 실행"
    ]
   },
   {
@@ -103,6 +117,25 @@
    ],
    "source": [
     "my_age = 25\n",
+    "if my_age >= 20: print(\"get drunk\")\n",
+    "else: print(\"not this time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not this time\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_age = 17\n",
     "if my_age >= 20: print(\"get drunk\")\n",
     "else: print(\"not this time\")"
    ]
@@ -186,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "주의 : 조건문에서 두 값이 같은지 비교할 때는 == 를 이용해야 한다.\n",
+    "주의 : 조건문에서 두 값이 같은지 비교할 때는 ```==``` 를 이용해야 한다.\n",
     "따라서 다음 코드는 에러가 발생한다."
    ]
   },
@@ -805,14 +838,16 @@
    "source": [
     "### 연습문제\n",
     "\n",
-    "* 정수를 입력받아 홀수(odd)인지 짝수(even)인지 판별하는 프로그램을 작성하라."
+    "다음의 연습문제들은 2, 3 단원의 내용만을 이용하여 작성해 보라.\n",
+    "\n",
+    "* 정수인 변수가 주어졌을 때, 홀수(odd)인지 짝수(even)인지 판별하는 프로그램을 작성하라."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 월(month)을 입력받으면 해당 월이 며칠인지 출력하는 프로그램을 작성하라."
+    "* 월(month)이 대입된 정수인 변수가 주어졌을 때, 해당 월이 며칠인지 출력하는 프로그램을 작성하라."
    ]
   },
   {
@@ -826,14 +861,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * 세 변의 길이를 입력하였을 때, 정삼각형(Equilateral triangle), 이등변삼각형(Isosceles triangle), 일반삼각형(triangle)을 구분하는 프로그램을 작성하라."
+    " * 삼각형 세 변의 길이가 변수로 주어졌을 때, 정삼각형(Equilateral triangle), 이등변삼각형(Isosceles triangle), 일반삼각형(triangle)을 구분하는 프로그램을 작성하라."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 입력받은 13자리 숫자가 ISBN 13자리 코드의 원칙에 맞는지 판단하는 프로그램을 작성하라.\n",
+    "* 삼각형 세 변의 길이가 변수로 주어졌을 때, 직각 삼각형인지 아닌지 판단하는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 두 자리 정수가 대입된 변수를 검사하여, 십의 자리 숫자와 일의 자리 숫자의 합이 10이 넘는지 판단하는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 13자리 숫자가 ISBN 13자리 코드의 원칙에 맞는지 판단하는 프로그램을 작성하라.\n",
     "  * ISBN코드가 abcdefghijklm일 때, $a+3b+c+3d+e+3f+g+3h+i+3j+k+3l+m$이 10으로 나누어 떨어져야 한다."
    ]
   },
@@ -841,7 +890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 입력한 해가 윤년인지를 판단하는 프로그램을 작성하라. 윤년의 규칙은 다음과 같다.\n",
+    "* 해(year)가 윤년인지를 판단하는 프로그램을 작성하라. 윤년의 규칙은 다음과 같다.\n",
     "  * 서력 기원 연수가 4로 나누어 떨어지는 해는 윤년으로 한다.(1988년, 1992년, 1996년, 2004년, 2008년, 2012년 …)\n",
     "  * 이 중에서 100으로 나누어 떨어지는 해는 평년으로 한다.(1900년, 2100년, 2200년, 2300년, 2500년 …)\n",
     "  * 그중에 400으로 나누어 떨어지는 해는 윤년으로 둔다."
@@ -851,7 +900,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 삼각형 세 변의 길이를 입력받아, 직각 삼각형인지 아닌지 판단하는 프로그램을 작성하라."
+    "* 문자열 변수를 검사하여, 마지막 글자가 모음(a, e, i, o, u, A, E, I, O, U)으로 끝나는지 아닌지 판단하는 프로그램을 작성하라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 문자열 변수를 검사하여, 첫 글자와 마지막 글자가 같은지 검사하는 프로그램을 작성하라. 대소문자는 구분하지 않는다. 즉, Mom은 첫 글자와 마지막 글자가 같은 단어로 간주한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 두 문자열 변수를 검사하여, 첫 글자끼리 서로 같은지 검사하는 프로그램을 작성하라. 대소문자는 구분하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 0 이상 100 이하의 값이 입력된 변수를 검사하여, grade를 정하는 프로그램을 작성하라. 규칙은 다음을 따른다.\n",
+    "\n",
+    "  * 95 이상 : A+  \n",
+    "  * 90 이상 95 미만 : A  \n",
+    "  * 85 이상 90 미만 : B+  \n",
+    "  * 80 이상 85 미만 : B  \n",
+    "  * 그 외의 점수 : C  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 몸무게, 키, 성별이 저장된 변수를 조사하여 비만도를 체크하는 프로그램을 작성하라. 비만도 기준은 다음의 자료를 이용하라.   \n",
+    "http://health.cdc.go.kr/health/mobileweb/content/group_view.jsp?CID=XUNT32FT6B"
    ]
   }
  ],
