--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 5. List and Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### List\n",
     "\n",
     "* ```[ ]```와 ```,```로 표현하는 데이터 형으로 여러 가지 형태의 정보를 하나의 리스트로 묶어서 나타냄"
