--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -877,6 +877,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \"./figure/input.png\", width = 450>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -2244,6 +2251,13 @@
     "name = \"Tom\"\n",
     "home = \"New York\"\n",
     "print(\"My name is %s and I am from %s.\" %(name, home))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./figure/print.png\" width=\"450\">"
    ]
   },
   {
