--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -2371,7 +2371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figure/print.png\" width=\"450\">"
+    "<img src=\"figure/print.png\" width=\"450\">"
    ]
   },
   {
