--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -591,7 +591,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"./figure/pi.png\" width = 500 height = 500>\n",
+    "<img src=\"./figure/pi.png\" width = 500 height = 500>\n",
+    "<img src=\"./figure/variable_obejct.png\" width=\"400\">\n",
     "\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
    ]
