--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -591,8 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./figure/pi.png\" width = 500 height = 500>\n",
-    "<img src=\"./figure/variable_obejct.png\" width=\"400\">\n",
+    "<img src=\"./figure/pi.png\" width=\"500\" height=\"500\">\n",
     "\n",
     "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
    ]
@@ -881,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"./figure/input.png\" width = 450>"
+    "<img src=\"./figure/input.png\" width=\"450\">"
    ]
   },
   {
