--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -572,28 +572,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다음의 예제에서는 ```radius```의 값이 계산 결과에 따라 바뀌는 모양을 나타내고 있다."
+    "다음의 예제에서는 ```area```의 값이 ```radius```의 값에 따라 바뀐다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "363\n"
+     ]
+    }
+   ],
    "source": [
     "pi = 3\n",
     "radius = 11\n",
     "area = pi * (radius ** 2)\n",
-    "radius = 14"
+    "print(area)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "432\n"
+     ]
+    }
+   ],
    "source": [
-    "<img src=\"./figure/pi.png\" width=\"500\" height=\"500\">\n",
-    "\n",
-    "그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag"
+    "radius = 12\n",
+    "area = pi * (radius ** 2)\n",
+    "print(area)"
    ]
   },
   {
